feat: 채널 상세 정보 조회 및 응답 DTO 개선
--- 본문 ---
- 채널 상세 정보를 담는 ChannelDetailResponse DTO를 새로 정의했습니다.
- ChannelRepository에서 채널 정보와 함께 마지막 메시지 시간, 참여자 목록을 조회하도록 로직을 변경했습니다.
- BasicChannelService에서 ChannelDetailResponse를 반환하도록 수정하고, ChannelMapper가 이를 ChannelDto로 변환하도록 개선했습니다.
- BaseMapper의 toDto(List<R>) 메서드에 null 값 처리를 위한 @IterableMapping 어노테이션을 추가했습니다.